# xsd_to_rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: codegen.rs  lib.rs  main.rs  parser.rs  types.rs
src/codegen/: complex.rs  emit.rs  mod.rs  util.rs
src/directory/: mod.rs  mod_gen.rs
src/parser/: complex.rs  element.rs  mod.rs  simple.rs
tests/: codegen_test.rs  convert_test.rs  parser_test.rs
tests/fixtures/: refs.xsd  simple.xsd
